--- a/css/styles.css
+++ b/css/styles.css
@@ -1701,3 +1701,27 @@ footer a {
     font-size: 11px;
   }
 }
+
+
+#scrollUpButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none; /* Hide the button initially */
+  background-color: #23034d; /* Bright color for visibility */
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  transition: opacity 0.3s, transform 0.3s;
+}
+
+#scrollUpButton:hover {
+  background-color: #e64a19;
+  transform: scale(1.1); /* Slight zoom effect */
+}
